--- a/metabolic_health_analysis.ipynb
+++ b/metabolic_health_analysis.ipynb
@@ -4,17 +4,15 @@
    "cell_type": "markdown",
    "id": "d57e4297-c80d-438a-b2a6-1906ec9a9e1a",
    "metadata": {},
-   "source": [
-    "# 🔬 Impact of Physical Activity on Biomarkers: Interactive Dashboard and Data Visualization"
-   ]
+   "source": "# 🔬 Impact of Physical Activity on Metabolic Health"
   },
   {
    "cell_type": "code",
    "id": "a97570150c27fe22",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-15T19:48:59.124300Z",
-     "start_time": "2025-05-15T19:48:58.523425Z"
+     "end_time": "2025-05-15T22:16:15.921762Z",
+     "start_time": "2025-05-15T22:16:15.555485Z"
     }
    },
    "source": [
@@ -34,49 +32,7 @@
      ]
     }
    ],
-   "execution_count": 48
-  },
-  {
-   "cell_type": "markdown",
-   "id": "40aa0fdb-237e-4b53-ac18-d62fd7b9b73a",
-   "metadata": {},
-   "source": [
-    "## 📊 Visualization Technique (25%)\n",
-    "\n",
-    "This section introduces the key visualizations used in the dashboard:\n",
-    "\n",
-    "- **Scatter Plot with Regression Line:** Shows the relationship between an activity variable (x-axis) and a biomarker (y-axis), color-coded by gender. Useful for identifying trends.\n",
-    "- **Box Plot:** Used to display the distribution of activity levels across gender, highlighting medians and outliers.\n",
-    "- **Violin Plot:** Combines box plot with KDE to show the distribution and density of biomarker data by gender.\n",
-    "- **Jittered Strip Plot:** Useful to show overlapping data points with a little random noise.\n",
-    "\n",
-    "These visualizations complement each other by combining distributional, categorical, and correlation insights. The dashboard uses dropdowns to allow real-time interactivity, enabling users to explore the effect of different activity types on various biomarkers."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3009a9ad-e8a1-44e4-ab83-6d4653048e01",
-   "metadata": {},
-   "source": [
-    "## Visualization Library (25%)\n",
-    "\n",
-    "- **ipywidgets**: Used for dropdown interactivity. Open-source, integrates seamlessly in Jupyter, declarative.\n",
-    "- **Matplotlib** and **Seaborn**: For plotting. Matplotlib is procedural and Seaborn is declarative and built on top of Matplotlib. They allow flexible plot customization and pair well with pandas.\n",
-    "- All libraries are installable via pip:\n",
-    "  ```bash\n",
-    "  pip install matplotlib seaborn ipywidgets\n",
-    "  ```\n",
-    "\n",
-    "Seaborn was chosen for its simplicity in statistical plotting and built-in themes. Ipywidgets were selected because they integrate naturally with Jupyter notebooks and require no external dashboard framework."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bbb81c55-4e97-49ed-9fc4-5c9beda58618",
-   "metadata": {},
-   "source": [
-    "## Demonstration (50%)"
-   ]
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -88,15 +44,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "4678204b-2ff3-4478-94e8-ade52b51552f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-15T19:26:26.441361Z",
-     "start_time": "2025-05-15T19:26:26.400840Z"
+     "end_time": "2025-05-15T22:16:15.937233Z",
+     "start_time": "2025-05-15T22:16:15.933944Z"
     }
    },
-   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -106,19 +60,19 @@
     "import ipywidgets as widgets\n",
     "from IPython.display import display\n",
     "import os"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "6444beb3-3553-4e94-b3ee-53a34e49575e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-15T19:29:34.044461Z",
-     "start_time": "2025-05-15T19:29:34.029457Z"
+     "end_time": "2025-05-15T22:16:17.130891Z",
+     "start_time": "2025-05-15T22:16:17.126818Z"
     }
    },
-   "outputs": [],
    "source": [
     "# get all files into a list\n",
     "path = 'Datafiles'\n",
@@ -128,7 +82,28 @@
     "# get all files ending in .xpt\n",
     "xpt_list = [file for file in fileNames if file.endswith('.xpt')]\n",
     "xpt_list"
-   ]
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['HSCRP_L.xpt',\n",
+       " 'CBC_L (1).xpt',\n",
+       " 'INS_L (1).xpt',\n",
+       " 'GLU_L.xpt',\n",
+       " 'DEMO_L.xpt',\n",
+       " 'HDL_L.xpt',\n",
+       " 'TCHOL_L.xpt',\n",
+       " 'PAQ_L (1).xpt',\n",
+       " 'GHB_L.xpt']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
